app/objects/Campagne_de_vaccination__c.object
<CustomObject>
    <fields>
        <fullName>Date_Debut__c</fullName>
        <label>Date Debut</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Fin__c</fullName>
        <label>Date Fin</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>montant_total__c</fullName>
        <formula>nombre_pv_total__c  *  prix_par_poulet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>montant total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nombre_pv_total__c</fullName>
        <label>nombre pv total</label>
        <summaryForeignKey>Poulet_Vaccine__c.Camp_Vacccination__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>prix_par_poulet__c</fullName>
        <label>prix par poulet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Campagne de vaccination</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campagne de vaccinations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>